# qt-easy-tier

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  app.manifest  publicserver.json  questions.txt
.gitee/: ISSUE_TEMPLATE.zh-CN.md
.github/workflows/: build-master.yml  build-pr.yml  build-release.yml  build_master.yml  macos.yml
.workflow/: pipeline-master.yml
CDIRCalculator/: CMakeLists.txt  cidrcalculator.cpp  cidrcalculator.h  main.cpp
QIF/config/: config.xml
Qt_Gui/: qtetmain.cpp  qtetmain.h  qtetmain.ui  qtetnetwork.cpp  qtetnetwork.h  qtetoneclick.cpp  qtetoneclick.h  qtetservers.cpp  qtetservers.h  qtetsettings.cpp  qtetsettings.h
Qt_HEAD/: mainwindow.h  netpage.h  oneclick.h  setting.h
Qt_Items/: qtetcheckbtn.cpp  qtetcheckbtn.h  qtetcombobox.cpp  qtetcombobox.h  qtetdrawutils.cpp  qtetdrawutils.h  qtetlabellist.cpp  qtetlabellist.h  qtetlineedit.cpp  qtetlineedit.h  qtetlistwidget.cpp  qtetlistwidget.h  qtetnodeinfo.cpp  qtetnodeinfo.h  qtetpublicserverdialog.cpp  qtetpublicserverdialog.h  qtetpushbtn.cpp  qtetpushbtn.h  qtetresponsivegrid.cpp  qtetresponsivegrid.h  qtetserversdialog.cpp  qtetserversdialog.h  qtettabwidget.cpp  qtettabwidget.h  qtettheme.cpp  qtettheme.h
Qt_QRC/: icons.qrc
Qt_SRC/: about.cpp  donate.cpp  mainwindow.cpp  netpage.cpp  oneclick.cpp  publicserver.cpp  setting.cpp
Qt_UI/: about.ui  donate.ui  mainwindow.ui  netpage.ui  oneclick.ui  publicserver.ui  setting.ui
SRC/: ETMacHelperClient.cpp  ETMacHelperClient.h  ETMacHelperServiceManager.h  ETMacHelperServiceManager.mm  ETMacHelperXpc.h  ETMacHelperXpc.mm  ETRunWorker.cpp  ETRunWorker.h  QtEasyTierHelper.cpp  main.cpp  networkconf.cpp  networkconf.h
Sources/: easytierworker.cpp  easytierworker.h  generateconf.cpp  generateconf.h  main.cpp  webdashboardworker.cpp  webdashboardworker.h
assets/: Info.plist  donate.md  field_mapping.json  help.md  install.iss  license.txt  nodes.db  qtet.icns  resources.qrc
assets/linux_pkg/: qteasytier.desktop
assets/macos/: io.github.qteasytier.QtEasyTier.Helper.plist
assets/package/linux/: build_appimage.sh  build_deb.sh  qteasytier  qteasytier.desktop
assets/package/linux/DEBIAN/: control
cmake/: QtEasyTierDaemon.cmake
cmake/scripts/: BuildDaemon.cmake  CollectDaemon.cmake
docs/: macos-community-build.md  macos-release-checklist.md  macos-release-plan.md
docs/superpowers/plans/: 2026-07-15-qt68-linuxdeployqt-deb.md
package/mac/: build_mac.sh  smoke_gui_ax.zsh  smoke_helper_ipc.py  smoke_smappservice_lifecycle.zsh
scripts/: build-appimage.sh  deploy-linux-qt.sh
src/: main.cpp
src/app/: AppLaunchManager.cpp  AppLaunchManager.h  AppServices.cpp  AppServices.h  CMakeLists.txt
src/core/application/: CMakeLists.txt
src/core/application/config/: ConfigImportExportService.cpp  ConfigImportExportService.h
src/core/config/: CMakeLists.txt  ConfigUrlCodec.cpp  ConfigUrlCodec.h  NetworkConfToml.cpp
src/core/favorite/: FavoriteNode.h
src/core/log/: CMakeLists.txt
src/core/repository/: CMakeLists.txt
src/core/service/: CMakeLists.txt
src/core/system_tray/: CMakeLists.txt
src/core/util/: CMakeLists.txt  DaemonRegisterHelper.cpp  DaemonRegisterHelper.h  UpdateCheckService.cpp  UpdateCheckService.h
src/core/viewmodel/: CMakeLists.txt  ConfigListModel.cpp  ConfigListModel.h
src/core/viewmodel/runtime/: NetworkPageViewModel.cpp  NetworkPageViewModel.h
src/core/vpn_manager/: CMakeLists.txt
src/qml/: Main.qml
src/qml/components/: PageContainer.qml
src/qml/pages/: FavoriteNodesPage.qml  InstanceList.qml  LeftPanel.qml  NetworkOptions.qml  NetworkPage.qml
tests/: CMakeLists.txt  tst_app_launch_manager.cpp  tst_app_services.cpp  tst_config_url_codec.cpp  tst_daemon_register_helper.cpp  tst_network_conf.cpp
